--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -26,14 +26,14 @@
     <string name="button_simpan">Simpan</string>
     <string name="card_pegawai">ID Pegawai</string>
     <string name="card_namapegawai">Nama Pegawai</string>
-    <string name="text_tambahpegawai">Tambah Pegawai</string>
+    <string name="text_tambahpegawai">TAMBAH PEGAWAI</string>
     <string name="validasi_nama_pelanggan">Nama pelanggan tidak boleh kosong</string>
     <string name="validasi_alamat_pelanggan">Alamat pelanggan tidak boleh kosong</string>
     <string name="validasi_nohp_pelanggan">Nomor HP pelanggan tidak boleh kosong</string>
     <string name="validasi_cabang_pelanggan">Cabang pelanggan tidak boleh kosong</string>
-    <string name="tambah_pelanggan_sukses">tambah_pelanggan_sukses</string>
-    <string name="tambah_pelanggan_gagal">tambah_pelanggan_gagal</string>
-    <string name="validasi_nama_pegawai">validasi_nama_pegawai</string>
+    <string name="tambah_pelanggan_sukses">Tambah Pelanggan Sukses</string>
+    <string name="tambah_pelanggan_gagal">Tambah Pelanggan Gagal</string>
+    <string name="validasi_nama_pegawai">Validasi Nama Pegawai</string>
     <string name="validasi_alamat_pegawai">validasi_alamat_pegawai</string>
     <string name="validasi_nohp_pegawai">validasi_nohp_pegawai</string>
     <string name="validasi_cabang_pegawai">validasi_cabang_pegawai</string>
@@ -41,4 +41,40 @@
     <string name="Hapus">Hapus</string>
     <string name="tambah_pegawai_sukses">tambah_pegawai_sukses</string>
     <string name="tambah_pegawai_gagal">tambah_pegawai_gagal</string>
+    <string name="ID_Layanan">ID Layanan</string>
+    <string name="selamatpagi">Selamat Pagi</string>
+    <string name="selamatsiang">Selamat Siang</string>
+    <string name="selamatmalam">Selamat Malam</string>
+    <string name="selamatsore">Selamat Sore</string>
+    <string name="namalayanan">Nama Layanan</string>
+    <string name="harga">Harga</string>
+    <string name="tambahlayanan">TAMBAH LAYANAN</string>
+    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
+    <string name="validasi_harga_layanan">validasi_harga_layanan</string>
+    <string name="validasi_cabang_layanan">validasi_cabang_layanan</string>
+    <string name="tambah_layanan_sukses">Tambah Layanan Sukses</string>
+    <string name="tambah_layanan_gagal">Tambah Layanan Gagal</string>
+    <string name="namaCabang">Nama Cabang</string>
+    <string name="ID_Cabang">ID Cabang</string>
+    <string name="namacabang">Nama Cabang</string>
+    <string name="tambahCabang">TAMBAH CABANG</string>
+    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
+    <string name="validasi_harga_cabang">validasi_harga_cabang</string>
+    <string name="validasi_alamat_cabang">validasi_alamat_cabang</string>
+    <string name="validasi_nohp_cabang">validasi_nohp_cabang</string>
+    <string name="tambah_cabang_sukses">tambah_cabang_sukses</string>
+    <string name="tambah_cabang_gagal">tambah_cabang_gagal</string>
+    <string name="ID_Tambahan">ID Tambahan</string>
+    <string name="namatambahan">Nama Tambahan</string>
+    <string name="tambahtambahan">TAMBAHKAN TAMBAHAN</string>
+    <string name="edit_pegawai_sukses">Data Pegawai Berhasil Diperbarui</string>
+    <string name="edit_pegawai_gagal">Data Pegawai Gagal Diperbarui</string>
+    <string name="perbarui">Perbarui</string>
+    <string name="edit_pegawai">Edit Pegawai</string>
+    <string name="tambah_pegawai">Tambah Pegawai</string>
+    <string name="validasi_nama_tambahan">Validasi Nama Tambahan</string>
+    <string name="validasi_alamat_tambahan">Validasi Alamat Tambahan</string>
+    <string name="validasi_cabang_tambahan">Validasi Cabang Tambahan</string>
+    <string name="tambah_tambahan_sukses">Tambah Tambahan Sukses</string>
+    <string name="tambah_tambahan_gagal">Tambah Tambahan Gagal</string>
 </resources>
