Menambahkan pilih pelanggan sudah pilih layanan belum

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -77,4 +77,5 @@
     <string name="validasi_cabang_tambahan">Additional Branch Validation</string>
     <string name="tambah_tambahan_sukses">Add Additional Success</string>
     <string name="tambah_tambahan_gagal">Add Additional Failed</string>
+    <string name="ID_Pegawai">Employee ID</string>
 </resources>
