menyelesaikan landscape dan translate transaksi

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,9 +49,9 @@
     <string name="namalayanan">Service Name :</string>
     <string name="harga">Price :</string>
     <string name="tambahlayanan">ADD SERVICES</string>
-    <string name="validasi_nama_layanan">validate_service_name</string>
-    <string name="validasi_harga_layanan">service_price_validation</string>
-    <string name="validasi_cabang_layanan">service_branch_validation</string>
+    <string name="validasi_nama_layanan">Service Name Validation</string>
+    <string name="validasi_harga_layanan">Service Price Validation</string>
+    <string name="validasi_cabang_layanan">Service Branch Validation</string>
     <string name="tambah_layanan_sukses">Add Success Service</string>
     <string name="tambah_layanan_gagal">Add Service Failed</string>
     <string name="namaCabang">Branch Name</string>
@@ -61,9 +61,9 @@
     <string name="validasi_nama_cabang">validate_branch_name</string>
     <string name="validasi_harga_cabang">branch_price_validation</string>
     <string name="validasi_alamat_cabang">branch_address_validation</string>
-    <string name="validasi_nohp_cabang">validate_nohp_branch</string>
-    <string name="tambah_cabang_sukses">add_branch_success</string>
-    <string name="tambah_cabang_gagal">add_branch_failed</string>
+    <string name="validasi_nohp_cabang">Branch Phone Number Validation</string>
+    <string name="tambah_cabang_sukses">Add Success Branch</string>
+    <string name="tambah_cabang_gagal">Add Branch Failed</string>
     <string name="ID_Tambahan">Additional ID :</string>
     <string name="namatambahan">Additional Names :</string>
     <string name="tambahtambahan">ADD ADDITIONAL</string>
@@ -78,4 +78,38 @@
     <string name="tambah_tambahan_sukses">Add Additional Success</string>
     <string name="tambah_tambahan_gagal">Add Additional Failed</string>
     <string name="ID_Pegawai">Employee ID</string>
+    <string name="etnamatambahan">Additional Names</string>
+    <string name="etharga">Price</string>
+    <string name="etcard_alamat">Address</string>
+    <string name="etcard_nohp">Phone number</string>
+    <string name="etcard_cabang">Branch</string>
+    <string name="detailpegawai">Employee Details</string>
+    <string name="namapelanggan">Customer Name</string>
+    <string name="namapegawai">Employee Name</string>
+    <string name="detailpelanggan">Customer Details</string>
+    <string name="idpelanggan">Customer ID</string>
+    <string name="layananutama">Main Services</string>
+    <string name="layanantambahan">Additional Services</string>
+    <string name="tambahan">Addition</string>
+    <string name="Proses">Process</string>
+    <string name="pilihpelanggan">Select Customer</string>
+    <string name="pilihlayanan">Select Services</string>
+    <string name="KonfirmasiDataTransaksi">Confirm Transaction Data</string>
+    <string name="DataPelanggan">Customer Data</string>
+    <string name="nama">Name</string>
+    <string name="totalbayar">Total Pay</string>
+    <string name="batal">Cancelled</string>
+    <string name="pembayaran">Payment</string>
+    <string name="PilihMetodePembayaran">Select Payment Method</string>
+    <string name="bayarnanti">Pay Later</string>
+    <string name="Tunai">cash</string>
+    <string name="MahsokLaundry">Mahsok Laundry</string>
+    <string name="idTransaksi">Transaction ID</string>
+    <string name="Tanggal">Date</string>
+    <string name="Pesanan">Order</string>
+    <string name="Karyawan">Employee</string>
+    <string name="RincianTambahan">Additional Details</string>
+    <string name="KirimWhatsApp">Send WhatsApp</string>
+    <string name="Cetak">Print</string>
+    <string name="SubtotalTambahan">Additional Subtotals</string>
 </resources>
