--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -49,9 +49,9 @@
     <string name="namalayanan">Nama Layanan :</string>
     <string name="harga">Harga :</string>
     <string name="tambahlayanan">TAMBAH LAYANAN</string>
-    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
-    <string name="validasi_harga_layanan">validasi_harga_layanan</string>
-    <string name="validasi_cabang_layanan">validasi_cabang_layanan</string>
+    <string name="validasi_nama_layanan">Validasi Nama Layanan</string>
+    <string name="validasi_harga_layanan">Validasi Harga Layanan</string>
+    <string name="validasi_cabang_layanan">Validasi Cabang Layanan</string>
     <string name="tambah_layanan_sukses">Tambah Layanan Sukses</string>
     <string name="tambah_layanan_gagal">Tambah Layanan Gagal</string>
     <string name="namaCabang">Nama Cabang</string>
@@ -61,9 +61,9 @@
     <string name="validasi_nama_cabang">validasi_nama_cabang</string>
     <string name="validasi_harga_cabang">validasi_harga_cabang</string>
     <string name="validasi_alamat_cabang">validasi_alamat_cabang</string>
-    <string name="validasi_nohp_cabang">validasi_nohp_cabang</string>
-    <string name="tambah_cabang_sukses">tambah_cabang_sukses</string>
-    <string name="tambah_cabang_gagal">tambah_cabang_gagal</string>
+    <string name="validasi_nohp_cabang">Validasi Nohp Cabang</string>
+    <string name="tambah_cabang_sukses">Tambah Cabang Sukses</string>
+    <string name="tambah_cabang_gagal">Tambah Cabang Gagal</string>
     <string name="ID_Tambahan">ID Tambahan :</string>
     <string name="namatambahan">Nama Tambahan :</string>
     <string name="tambahtambahan">TAMBAHKAN TAMBAHAN</string>
@@ -78,4 +78,38 @@
     <string name="tambah_tambahan_sukses">Tambah Tambahan Sukses</string>
     <string name="tambah_tambahan_gagal">Tambah Tambahan Gagal</string>
     <string name="ID_Pegawai">ID Pegawai</string>
+    <string name="etnamatambahan">Nama Tambahan</string>
+    <string name="etharga">Harga</string>
+    <string name="etcard_alamat">Alamat</string>
+    <string name="etcard_nohp">No HP</string>
+    <string name="etcard_cabang">Cabang</string>
+    <string name="detailpegawai">Detail Pegawai</string>
+    <string name="namapelanggan">Nama Pelanggan</string>
+    <string name="namapegawai">Nama Pegawai</string>
+    <string name="detailpelanggan">Detail Pelanggan</string>
+    <string name="idpelanggan">ID Pelanggan</string>
+    <string name="layananutama">Layanan Utama</string>
+    <string name="layanantambahan">Layanan Tambahan</string>
+    <string name="tambahan">Tambahan</string>
+    <string name="Proses">Proses</string>
+    <string name="pilihpelanggan">Pilih Pelanggan</string>
+    <string name="pilihlayanan">Pilih Layanan</string>
+    <string name="KonfirmasiDataTransaksi">Konfirmasi Data Transaksi</string>
+    <string name="DataPelanggan">Data Pelanggan</string>
+    <string name="nama">"Nama "</string>
+    <string name="totalbayar">Total Bayar</string>
+    <string name="batal">Batal</string>
+    <string name="pembayaran">Pembayaran</string>
+    <string name="PilihMetodePembayaran">Pilih Metode Pembayaran</string>
+    <string name="bayarnanti">Bayar Nanti</string>
+    <string name="Tunai">Tunai</string>
+    <string name="MahsokLaundry">Mahsok Laundry</string>
+    <string name="idTransaksi">ID Transaksi</string>
+    <string name="Tanggal">Tanggal</string>
+    <string name="Pesanan">Pesanan</string>
+    <string name="Karyawan">Karyawan</string>
+    <string name="RincianTambahan">Rincian Tambahan</string>
+    <string name="KirimWhatsApp">Kirim WhatsApp</string>
+    <string name="Cetak">Cetak</string>
+    <string name="SubtotalTambahan">Subtotal Tambahan</string>
 </resources>
