mentranslatekan semua teks

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -140,4 +140,130 @@
     <string name="Gagalmenghapuslaporan">Failed to delete report</string>
     <string name="DataLaporanTransaksi">"Data Laporan Transaksi "</string>
     <string name="Gagalmengupdatestatus">Failed to update status</string>
+    <string name="delete_confirmation">Delete Confirmation</string>
+    <string name="delete_message">Are you sure you want to delete this data?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="delete_success">Data deleted successfully</string>
+    <string name="delete_failed">Failed</string>
+    <string name="nama_tidak_tersedia">Name not available</string>
+    <string name="harga_tidak_tersedia">Not available</string>
+    <string name="label_harga">Phone No: %1$s</string>
+    <string name="terjadi_kesalahan">An error occurred</string>
+    <string name="alamat_tidak_tersedia">Not available</string>
+    <string name="nohp_tidak_tersedia">Not available</string>
+    <string name="label_alamat">Address: %1$s</string>
+    <string name="label_nohp">Phone No: %1$s</string>
+    <string name="batal_memilih_pelanggan">Cancel Customer Select</string>
+    <string name="batal_memilih_layanan">Cancel Selecting Service</string>
+    <string name="batal_memilih_layanan_tambahan">Cancel Select Additional Services</string>
+    <string name="aksi_dibatalkan">Action Canceled</string>
+    <string name="whatsapp_message_sent_en">WhatsApp message sent successfully!</string>
+    <string name="failed_to_open_whatsapp_en">Failed to open WhatsApp</string>
+    <string name="firebase_success_message">Transaction data saved successfully!</string>
+    <string name="firebase_failure_message">Failed to save transaction data</string>
+    <string name="bluetooth_permission_needed">Bluetooth permission is required for printing</string>
+    <string name="bluetooth_not_supported">Bluetooth is not supported on this device</string>
+    <string name="bluetooth_not_enabled">Bluetooth is not active. Please enable Bluetooth</string>
+    <string name="bluetooth_permission_not_available">Bluetooth permission is not available</string>
+    <string name="print_success">Receipt printed successfully!</string>
+    <string name="print_failed">Failed to print receipt</string>
+    <string name="print_error">Error: %1$s</string>
+    <string name="payment_method_selected">Method selected: %1$s</string>
+    <string name="additional_service_not_found">Additional service data not found</string>
+    <string name="log_no_data_found">No data found</string>
+    <string name="no_matching_additions">No matching additions</string>
+    <string name="no_matching_services">No matching services</string>
+    <string name="service_data_not_found">Service data not found</string>
+    <string name="log_added_service">Added service: %1$s</string>
+    <string name="log_added_additional_service">Added additional service: %1$s</string>
+    <string name="log_error_parsing_service">Error parsing service: %1$s</string>
+    <string name="log_error_parsing_additional_service">Error parsing additional service: %1$s</string>
+    <string name="no_matching_customers">No matching customers</string>
+    <string name="no_customers_available">Customer data not available</string>
+    <string name="customer_data_not_found">Customer data not found</string>
+    <string name="log_added_customer">Added customer: %1$s</string>
+    <string name="log_customer_null">customer is null for key: %1$s</string>
+    <string name="log_error_parsing_customer">Error parsing customer: %1$s</string>
+    <string name="log_total_customers_loaded">Total customers loaded: %1$d</string>
+    <string name="error_calculating_total_price">Error calculating total price</string>
+    <string name="confirm_delete_title">Delete Confirmation</string>
+    <string name="confirm_delete_message">Are you sure you want to delete \"%1$s\"?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="data_deleted_success">Data successfully deleted</string>
+    <string name="data_delete_failed">Failed to delete data</string>
+    <string name="data_load_failed">Failed to load data</string>
+    <string name="customer_update_success">Customer data updated successfully</string>
+    <string name="customer_update_failed">Failed to update customer data</string>
+    <string name="employee_update_success">Employee data updated successfully</string>
+    <string name="employee_update_failed">Failed to update employee data</string>
+    <string name="edit_employee_data">Edit Employee Data</string>
+    <string name="update">Update</string>
+    <string name="log_unknown_error">Unknown error</string>
+    <string name="confirm_delete_service_message">Are you sure you want to delete service \"%1$s\"?</string>
+    <string name="delete_branch_title">Delete Branch</string>
+    <string name="confirm_delete_branch_message">Are you sure you want to delete branch \"%1$s\"?</string>
+    <string name="branch_deleted_success">Branch successfully deleted</string>
+    <string name="branch_delete_failed">Failed to delete branch</string>
+    <string name="error_loading_interface">Error loading interface</string>
+    <string name="error_connecting_database">Error connecting to database</string>
+    <string name="session_expired">Session has expired</string>
+    <string name="not_logged_in">You are not logged in</string>
+    <string name="please_login_again">please login again</string>
+    <string name="user_data_not_found">User data not found</string>
+    <string name="error_loading_profile">Error loading profile</string>
+    <string name="failed_load_server_data">Failed to load data from server</string>
+    <string name="loading">Loading...</string>
+    <string name="name_not_available">Name not available</string>
+    <string name="data_not_available">Data not available</string>
+    <string name="edit_profile_clicked">Edit Profile clicked</string>
+    <string name="sign_out_success">Successfully signed out</string>
+    <string name="sign_out_title">Sign Out</string>
+    <string name="sign_out_message">Are you sure you want to sign out?</string>
+    <string name="data_transaksi_title">Transaction Data</string>
+    <string name="nama_pelanggan">Customer Name : %1$s</string>
+    <string name="no_hp">Phone number : %1$s</string>
+    <string name="pilih_pelanggan">Select Customer</string>
+    <string name="nama_layanan">Service Name : %1$s</string>
+    <string name="harga_layanan">Price : %1$s</string>
+    <string name="pilih_layanan">Select Services</string>
+    <string name="layanan_tambahan">Additional Services</string>
+    <string name="tambah_layanan">Add Services</string>
+    <string name="proses">Proses</string>
+    <string name="konfirmasi">Konfirmasi</string>
+    <string name="pilih_pelanggan_dulu">Select customers first</string>
+    <string name="pilih_layanan_utama_dulu">Select the main service first</string>
+    <string name="harga_layanan_tidak_valid">The main service price is invalid</string>
+    <string name="data_pelanggan">Customer Data</string>
+    <string name="data_layanan">Service Data</string>
+    <string name="total_harga">Total price</string>
+    <string name="belum_dipilih">Not selected yet</string>
+    <string name="kosong">-</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="full_name">Full Name</string>
+    <string name="enter_full_name">Enter full name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="enter_phone_number">Enter phone number</string>
+    <string name="password">Password</string>
+    <string name="enter_password">Enter password</string>
+    <string name="save">Save</string>
+    <string name="saving">Saving...</string>
+    <string name="back">Back</string>
+    <string name="profile_picture">Profile Picture</string>
+    <string name="toggle_password_visibility">Toggle Password Visibility</string>
+    <string name="fill_all_fields">Please fill in all fields!</string>
+    <string name="invalid_phone_number">Invalid phone number!</string>
+    <string name="password_min_length">Password must be at least 6 characters!</string>
+    <string name="phone_already_registered">Phone number already registered!</string>
+    <string name="profile_updated_successfully">Profile updated successfully!</string>
+    <string name="profile_updated_with_warning">Profile updated, but with minor warnings.</string>
+    <string name="error_saving_profile">Failed to save profile!</string>
+    <string name="error_checking_phone">Failed to check phone number!</string>
+    <string name="discard_changes_title">Discard Changes?</string>
+    <string name="discard_changes_message">Unsaved changes will be lost. Are you sure you want to exit?</string>
+    <string name="discard">Discard</string>
+    <string name="keep_editing">Keep Editing</string>
+    <string name="profile_refreshed">Profile successfully updated</string>
+    <string name="error_opening_edit_profile">Failed to open edit profile page</string>
 </resources>
