--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,130 @@
     <string name="Gagalmenghapuslaporan">Gagal menghapus laporan</string>
     <string name="DataLaporanTransaksi">Data Laporan Transaksi</string>
     <string name="Gagalmengupdatestatus">Gagal mengupdate status</string>
+    <string name="delete_confirmation">Konfirmasi Hapus</string>
+    <string name="delete_message">Yakin ingin menghapus data ini?</string>
+    <string name="yes">Ya</string>
+    <string name="no">Tidak</string>
+    <string name="delete_success">Data berhasil dihapus</string>
+    <string name="delete_failed">Gagal</string>
+    <string name="nama_tidak_tersedia">Nama tidak tersedia</string>
+    <string name="harga_tidak_tersedia">Tidak tersedia</string>
+    <string name="label_harga">No HP : %1$s</string>
+    <string name="terjadi_kesalahan">Terjadi kesalahan</string>
+    <string name="alamat_tidak_tersedia">Tidak tersedia</string>
+    <string name="nohp_tidak_tersedia">Tidak tersedia</string>
+    <string name="label_alamat">Alamat : %1$s</string>
+    <string name="label_nohp">No HP : %1$s</string>
+    <string name="batal_memilih_pelanggan">Batal Memilih Pelanggan</string>
+    <string name="batal_memilih_layanan">Batal Memilih Layanan</string>
+    <string name="batal_memilih_layanan_tambahan">Batal Memilih Layanan Tambahan</string>
+    <string name="aksi_dibatalkan">Aksi Dibatalkan</string>
+    <string name="whatsapp_message_sent_en">Pesan WhatsApp berhasil dikirim!</string>
+    <string name="failed_to_open_whatsapp_en">Gagal membuka WhatsApp</string>
+    <string name="firebase_success_message">Data transaksi berhasil disimpan!</string>
+    <string name="firebase_failure_message">Gagal menyimpan data transaksi</string>
+    <string name="bluetooth_permission_needed">Permission Bluetooth diperlukan untuk mencetak</string>
+    <string name="bluetooth_not_supported">Bluetooth tidak didukung pada perangkat ini</string>
+    <string name="bluetooth_not_enabled">Bluetooth tidak aktif. Silakan aktifkan Bluetooth</string>
+    <string name="bluetooth_permission_not_available">Permission Bluetooth tidak tersedia</string>
+    <string name="print_success">Struk berhasil dicetak!</string>
+    <string name="print_failed">Gagal mencetak struk</string>
+    <string name="print_error">Error: %1$s</string>
+    <string name="payment_method_selected">Metode dipilih: %1$s</string>
+    <string name="additional_service_not_found">Data layanan tambahan tidak ditemukan</string>
+    <string name="log_no_data_found">No data found</string>
+    <string name="no_matching_additions">Tidak ada tambahan yang cocok</string>
+    <string name="no_matching_services">Tidak ada layanan yang cocok</string>
+    <string name="service_data_not_found">Data layanan tidak ditemukan</string>
+    <string name="log_added_service">Added layanan: %1$s</string>
+    <string name="log_added_additional_service">Added layanan tambahan: %1$s</string>
+    <string name="log_error_parsing_service">Error parsing layanan: %1$s</string>
+    <string name="log_error_parsing_additional_service">Error parsing layanan tambahan: %1$s</string>
+    <string name="no_matching_customers">Tidak ada pelanggan yang cocok</string>
+    <string name="no_customers_available">Data pelanggan tidak tersedia</string>
+    <string name="customer_data_not_found">Data pelanggan tidak ditemukan</string>
+    <string name="log_added_customer">Added pelanggan: %1$s</string>
+    <string name="log_customer_null">pelanggan is null for key: %1$s</string>
+    <string name="log_error_parsing_customer">Error parsing pelanggan: %1$s</string>
+    <string name="log_total_customers_loaded">Total pelanggan loaded: %1$d</string>
+    <string name="error_calculating_total_price">Error menghitung total harga</string>
+    <string name="confirm_delete_title">Konfirmasi Hapus</string>
+    <string name="confirm_delete_message">Apakah Anda yakin ingin menghapus tambahan \"%1$s\"?</string>
+    <string name="delete">Hapus</string>
+    <string name="cancel">Batal</string>
+    <string name="data_deleted_success">Data berhasil dihapus</string>
+    <string name="data_delete_failed">Gagal menghapus data</string>
+    <string name="data_load_failed">Data Gagal Dimuat</string>
+    <string name="customer_update_success">Berhasil update data pelanggan</string>
+    <string name="customer_update_failed">Gagal update data pelanggan</string>
+    <string name="employee_update_success">Berhasil update data pegawai</string>
+    <string name="employee_update_failed">Gagal update data pegawai</string>
+    <string name="edit_employee_data">Edit Data Pegawai</string>
+    <string name="update">Update</string>
+    <string name="log_unknown_error">Unknown error</string>
+    <string name="confirm_delete_service_message">Apakah Anda yakin ingin menghapus layanan \"%1$s\"?</string>
+    <string name="delete_branch_title">Hapus Cabang</string>
+    <string name="confirm_delete_branch_message">Yakin ingin menghapus cabang \"%1$s\"?</string>
+    <string name="branch_deleted_success">Cabang berhasil dihapus</string>
+    <string name="branch_delete_failed">Gagal menghapus cabang</string>
+    <string name="error_loading_interface">Error loading interface</string>
+    <string name="error_connecting_database">Error connecting to database</string>
+    <string name="session_expired">Sesi telah berakhir</string>
+    <string name="not_logged_in">Anda belum login</string>
+    <string name="please_login_again">silakan login kembali</string>
+    <string name="user_data_not_found">Data user tidak ditemukan</string>
+    <string name="error_loading_profile">Error loading profile</string>
+    <string name="failed_load_server_data">Gagal memuat data dari server</string>
+    <string name="edit_profile_clicked">Edit Profile clicked</string>
+    <string name="sign_out_success">Berhasil sign out</string>
+    <string name="sign_out_title">Sign Out</string>
+    <string name="sign_out_message">Apakah Anda yakin ingin keluar dari akun?</string>
+    <string name="data_transaksi_title">Data Transaksi</string>
+    <string name="nama_pelanggan">Nama Pelanggan : %1$s</string>
+    <string name="no_hp">No HP : %1$s</string>
+    <string name="pilih_pelanggan">Pilih Pelanggan</string>
+    <string name="nama_layanan">Nama Layanan : %1$s</string>
+    <string name="harga_layanan">Harga : %1$s</string>
+    <string name="pilih_layanan">Pilih Layanan</string>
+    <string name="layanan_tambahan">Layanan Tambahan</string>
+    <string name="tambah_layanan">Tambah Layanan</string>
+    <string name="proses">Proses</string>
+    <string name="konfirmasi">Konfirmasi</string>
+    <string name="pilih_pelanggan_dulu">Pilih pelanggan terlebih dahulu</string>
+    <string name="pilih_layanan_utama_dulu">Pilih layanan utama terlebih dahulu</string>
+    <string name="harga_layanan_tidak_valid">Harga layanan utama tidak valid</string>
+    <string name="data_pelanggan">Data Pelanggan</string>
+    <string name="data_layanan">Data Layanan</string>
+    <string name="total_harga">Total Harga</string>
+    <string name="belum_dipilih">Belum dipilih</string>
+    <string name="kosong">-</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="full_name">Nama Lengkap</string>
+    <string name="enter_full_name">Masukkan nama lengkap</string>
+    <string name="phone_number">Nomor Telepon</string>
+    <string name="enter_phone_number">Masukkan nomor telepon</string>
+    <string name="password">Password</string>
+    <string name="enter_password">Masukkan password</string>
+    <string name="save">Simpan</string>
+    <string name="saving">Menyimpan...</string>
+    <string name="back">Kembali</string>
+    <string name="profile_picture">Foto Profile</string>
+    <string name="toggle_password_visibility">Toggle Password Visibility</string>
+    <string name="fill_all_fields">Isi semua field!</string>
+    <string name="invalid_phone_number">Nomor telepon tidak valid!</string>
+    <string name="password_min_length">Password minimal 6 karakter!</string>
+    <string name="phone_already_registered">Nomor telepon sudah terdaftar!</string>
+    <string name="profile_updated_successfully">Profile berhasil diperbarui!</string>
+    <string name="profile_updated_with_warning">Profile diperbarui, tapi ada peringatan minor.</string>
+    <string name="error_saving_profile">Gagal menyimpan profile!</string>
+    <string name="error_checking_phone">Gagal mengecek nomor telepon!</string>
+    <string name="data_not_available">Data tidak tersedia</string>
+    <string name="loading">Memuat...</string>
+    <string name="name_not_available">Nama tidak tersedia</string>
+    <string name="discard_changes_title">Buang Perubahan?</string>
+    <string name="discard_changes_message">Perubahan yang belum disimpan akan hilang. Apakah Anda yakin ingin keluar?</string>
+    <string name="discard">Buang</string>
+    <string name="keep_editing">Lanjut Edit</string>
+    <string name="profile_refreshed">Profil berhasil diperbarui</string>
+    <string name="error_opening_edit_profile">Gagal membuka halaman edit profil</string>
 </resources>
