--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -112,10 +112,10 @@
     <string name="KirimWhatsApp">Send WhatsApp</string>
     <string name="Cetak">Print</string>
     <string name="SubtotalTambahan">Additional Subtotals</string>
-    <string name="greeting_morning">Good Morning</string>
-    <string name="greeting_afternoon">Good Afternoon</string>
-    <string name="greeting_evening">Good Afternoon</string>
-    <string name="greeting_night">Good night</string>
+    <string name="greeting_morning">Good Morning,</string>
+    <string name="greeting_afternoon">Good Afternoon,</string>
+    <string name="greeting_evening">Good Afternoon,</string>
+    <string name="greeting_night">Good night,</string>
     <string name="Silakanloginuntukmelanjutkan">Please log in to continue</string>
     <string name="SelamatDatang">Welcome</string>
     <string name="Password">Passwords</string>
